fixing controllers and the implemented logic